src/assets/scss/_cruk-emails.scss
// General styles
// ------------------------------------
* {
  -webkit-hyphens: none;
  -ms-hyphens: none;
  hyphens: none;
}

h1,
h2,
h3 {
  margin-top: .5em;
  text-transform: uppercase;
  color: $primary-color;
  font-weight: $header-font-weight;
}

.button {

  &.secondary {
    a {
      color: $secondary-color !important;
      border: 2px solid $secondary-color !important;
      outline: 2px solid $white !important;
      background-color: $white !important;
    }
  }

  &.button-facebook {
    a {
      padding-left: 50px !important;
      color: $white !important;
      border: 2px solid $facebook-blue !important;
      outline: 2px solid $white !important;
      background: url('http://wpm.ccmp.eu/wpm/459/ContentUploads/facebook-icon.png') 0 -2px no-repeat !important;
      background-color: $facebook-blue !important;
    }
  }
}

center {
  min-width: 100% !important;
}

.text-center {
  text-align: center;
}

.callout {
  margin: 0 $global-gutter $global-gutter;
}

.panel {
  background-color: $primary-color;
  color: $white;
  margin: 0 0 $global-gutter;
  border: none;
  border-radius: 0;
  .wrapper-inner {
    padding: $global-gutter 0 0;
  }
}

// Preheader block
// ------------------------------------
.preheader {
  color: $cruk-grey;
  background-color: $light-gray;
  font-size: 12px;
  .wrapper-inner {
    padding: 6px 0;
  }
}

// Header block
// ------------------------------------

// Main messsage block
// ------------------------------------
.hero-body {
  background-color: $primary-color;
  .wrapper-inner {
    padding: 20px 20px 0;
  }
  h1,
  h2,
  h3,
  p {
    color: $white;
  }
}

.hero-link {
  background: url('http://wpm.ccmp.eu/wpm/459/ContentUploads/curve.png') 50% 100% no-repeat;
  .wrapper-inner {
    padding: 0 10px 20px;
  }
}

// Events block
// ------------------------------------
.events {
  h2 {
    margin: 0 !important;
    padding-bottom: 14px;
    border-bottom: 1px solid $lightish-gray;
  }

  .button {
    margin-top: 20px;
  }

  .event {
    border-bottom: 1px solid $lightish-gray;
  }

  .event-calendar {
    padding: 25px 0 15px;
    background: url('http://wpm.ccmp.eu/wpm/459/ContentUploads/calendar-icon.png') 50% 10px no-repeat;
  }

  .event-day {
    display: block;
    text-align: center;
    color: $white;
    font-size: 1.2em;
    font-weight: 700;
    line-height: 1;
  }

  .event-month {
    display: block;
    text-align: center;
    text-transform: uppercase;
    color: $white;
    font-size: small;
    font-weight: 500;
    line-height: 1;
  }

  .event-info {
    padding: 10px 10% 0 10px;
    background: url('http://wpm.ccmp.eu/wpm/459/ContentUploads/chevron.png') 95% 50% no-repeat;
  }

  .event-name {
    display: block;
    text-transform: uppercase;
    color: $primary-color;
    font-weight: 700;
  }

  .event-date,
  .event-time {
    color: $dark-gray;
    display: block;
    text-transform: uppercase;
    font-weight: 700;
  }
}

// Donate block
// ------------------------------------
.donate {
  p {
    text-transform: uppercase;
    color: $white;
    font-weight: 700;
    font-size: 16px;
    margin: 0 !important;

    span {
      display: block;

      @media screen and (max-width: $global-breakpoint) {
        text-align: center;
      }
    }
  }

  .button {
    margin-top: 0;
  }
}

// Story block
// ------------------------------------
.story {
  margin: 0;
}

.stories {
  h2,
  p {
    text-align: left;
  }
}

// Fundraise
// ------------------------------------

// Shop block
// ------------------------------------
.shop-item {
  margin: 0;
}

.red {
  color: red;
}

// Social media icons block
// ------------------------------------
.social {
  background-color: $lightish-gray;
  .wrapper-inner {
    padding: 10px 0;
  }
}

// Footer blocks
// ------------------------------------
.partner,
.sponsors,
.supporters,
.footer {
  margin-top: -16px;
  border-bottom: 2px solid $white;
  background-color: $light-gray;
  .wrapper-inner {
    padding: 20px;
  }
}

